<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#666666"
    tools:context=".EditUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <Button
                android:id="@+id/Eupdate"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="302dp"
                android:layout_height="62dp"
                android:layout_marginTop="28dp"

                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Edance" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="81dp"
                android:layout_marginTop="76dp"
                android:hint="@string/name"
                android:textColorHint="#fff"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Ename"
                    android:layout_width="fill_parent"
                    android:maxLength="30"
                    android:textColor="#fff"
                    android:layout_height="60dp"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="81dp"
                android:layout_marginTop="11dp"
                android:hint="@string/email"
                android:textColorHint="#fff"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Eemail"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:textColor="#fff"
                    android:maxLength="35"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="79dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:textColorHint="#fff"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:errorEnabled="true"
                app:layout_anchor="@+id/constraintLayout"
                app:layout_anchorGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedEmail"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Epassword"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:textColor="#fff"
                    android:maxLength="8"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="137dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"

                app:ccp_contentColor="#fff"
                app:ccp_defaultNameCode="+91"
                app:ccp_hintExampleNumber="true"
                app:ccp_hintExampleNumberType="FIXED_LINE"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedPassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="140dp"
                android:hint="@string/phonenumber"
                android:textColorHint="#fff"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
                app:layout_constraintTop_toBottomOf="@+id/outlinedPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Ephone_number"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:maxLength="10"
                    android:textColor="#fff"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedBirthDay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="69dp"
                android:layout_marginTop="8dp"
                android:hint="@string/birthday"
                android:textColorHint="#fff"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:endIconContentDescription="icme"
                app:endIconDrawable="@drawable/ic_date_range_black_24dp"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedPhone">
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"

                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Edate"
                    android:layout_width="fill_parent"
                    android:layout_height="57dp"
                    android:inputType="none"
                    android:textColor="#fff"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/gender"
                android:textColor="#fff"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedBirthDay" />

            <RadioGroup
                android:id="@+id/Eradiogroup"
                android:layout_width="158dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"

                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.208"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/outlinedBirthDay">

                <RadioButton
                    android:id="@+id/EradioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/male"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="273dp"
                    tools:layout_editor_absoluteY="561dp" />

                <RadioButton
                    android:id="@+id/EradioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/female"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="148dp"
                    tools:layout_editor_absoluteY="441dp" />

            </RadioGroup>

            <com.google.android.material.chip.Chip
                android:id="@+id/Egym"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="86dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/gym"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/Eradiogroup" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Eguitar"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="86dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/guitar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintStart_toEndOf="@+id/Egym"
                app:layout_constraintTop_toBottomOf="@+id/Eradiogroup" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Esing"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="86dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/sing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintStart_toEndOf="@+id/Edance"
                app:layout_constraintTop_toBottomOf="@+id/Eguitar" />

            <com.google.android.material.chip.Chip
                android:id="@+id/Edance"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="86dp"
                android:layout_height="50dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="8dp"
                android:text="@string/dance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Egym" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/hobies"
                android:textColor="#fff"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>